Add eject command

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js"
+    "build": "npm-run-all build-css build-js",
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
