--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,11 @@
 .env.production.local
 package-lock.json
 
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
