--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
     "cross-fetch": "3.0.2",
+    "bootstrap": "4.3.1",
     "i": "0.3.6",
     "jquery": "3.3.1",
     "npm": "6.9.0",
     "npm-run-all": "4.1.5",
     "react": "16.8.6",
+    "react-bootstrap": "1.0.0-beta.6",
     "react-css-modules": "4.7.9",
     "react-dom": "16.8.6",
     "react-load-script": "0.0.6",
     "react-redux": "6.0.1",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
-    "react-svg": "8.0.2",
+    "react-svg": "8.0.3",
     "reactour": "1.13.3",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
