--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # dependencies
-/node_modules
+node_modules/
 
 # testing
-/coverage
+coverage/
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
