--- a/package.json
+++ b/package.json
@@ -16,25 +16,27 @@
     "react-css-modules": "4.7.9",
     "react-dom": "16.8.6",
     "react-load-script": "0.0.6",
-    "react-redux": "6.0.1",
+    "react-redux": "7.0.1",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-svg": "8.0.3",
-    "reactour": "1.13.3",
+    "reactour": "1.13.4",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
-  },
-  "devDependencies": {
-    "node-sass-chokidar": "1.3.4",
+    "redux-thunk": "2.3.0",
+    "sass": "1.18.0",
     "react-scripts": "2.1.8",
     "react-scripts-cssmodules": "1.1.50"
   },
+  "devDependencies": {
+    "watch": "1.0.2"
+  },
   "scripts": {
-    "build-css": "node-sass-chokidar src/styles -o src/styles/css",
-    "watch-css": "npm run build-css && node-sass-chokidar src/styles -o src/styles/css --watch --recursive",
+    "build-css": "sass src/styles/sass:src/styles/css",
+    "watch-css": "watch 'npm run-script build-css' src/styles/sass --interval=0.5 --wait=0",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
+    "deploy": "npm-run-all -p build-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "eject": "react-scripts eject"
