--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,3 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
     NodeCommand: "npm run-script deploy"
+  aws:elasticbeanstalk:application:environment:
+    LETSENCRYPT_DOMAIN:
+    LETSENCRYPT_EMAIL:
