--- a/.ebextensions/https-instance.config
+++ b/.ebextensions/https-instance.config
@@ -26,8 +26,8 @@ files:
         </Proxy>
 
         SSLEngine             on
-        SSLCertificateFile "/etc/letsencrypt/live/LETSENCRYPT_DOMAIN/fullchain.pem"
-        SSLCertificateKeyFile "/etc/letsencrypt/live/LETSENCRYPT_DOMAIN/privkey.pem"
+        SSLCertificateFile "/etc/letsencrypt/live/HTTPS_DOMAIN/fullchain.pem"
+        SSLCertificateKeyFile "/etc/letsencrypt/live/HTTPS_DOMAIN/privkey.pem"
         SSLCipherSuite        EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
         SSLProtocol           All -SSLv2 -SSLv3
         SSLHonorCipherOrder   On
@@ -56,14 +56,9 @@ container_commands:
     command: "killall httpd ; sleep 3"
   10_replace_placeholders:
     command: |
-      SED_EXPRESSION='s/LETSENCRYPT_DOMAIN/'$LETSENCRYPT_DOMAIN'/g'
+      SED_EXPRESSION='s/HTTPS_DOMAIN/'$HTTPS_DOMAIN'/g'
       echo $SED_EXPRESSION
       sed -i -e $SED_EXPRESSION /etc/httpd/conf.d/ssl.conf
-  20_install_certbot:
-    command: "mkdir -p /opt/certbot && wget https://dl.eff.org/certbot-auto -O /opt/certbot/certbot-auto && chmod a+x /opt/certbot/certbot-auto"
-  30_install_certificate:
-    command: |
-      sudo /opt/certbot/certbot-auto certonly --debug --non-interactive --email ${LETSENCRYPT_EMAIL} --agree-tos --standalone --domains ${LETSENCRYPT_DOMAIN} --keep-until-expiring
-  40_start_apache:
+  20_start_apache:
     command: |
       sudo httpd -k start
