--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,6 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "npm run-script deploy"
+    NodeCommand: "npm start"
   aws:elasticbeanstalk:application:environment:
-    LETSENCRYPT_DOMAIN:
-    LETSENCRYPT_EMAIL:
+    HTTPS_DOMAIN:
