--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-# dependencies
-node_modules/
+# Dependencies
+/node_modules
 
-# testing
-coverage/
+# Testing
+/coverage
 
-# production
-build/
+# Production
+/build
 
-# misc
+# Misc
 .DS_Store
 .env.local
 .env.development.local
@@ -15,10 +15,10 @@ build/
 .env.production.local
 package-lock.json
 
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
