--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "1.19.0",
+    "debug": "4.1.1",
+    "express": "4.16.4",
+    "log": "6.0.0",
+    "morgan": "1.9.1",
+    "serve-favicon": "2.5.0"
+  },
+  "devDependencies": {
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
     "cross-fetch": "3.0.2",
@@ -16,29 +24,26 @@
     "react-css-modules": "4.7.9",
     "react-dom": "16.8.6",
     "react-load-script": "0.0.6",
-    "react-redux": "7.0.2",
+    "react-redux": "7.0.3",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
-    "react-svg": "8.0.8",
+    "react-svg": "9.0.4",
     "reactour": "1.13.4",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
-    "sass": "1.19.0",
-    "react-scripts": "2.1.8",
+    "node-sass-chokidar": "1.3.4",
+    "react-scripts": "3.0.0",
     "react-scripts-cssmodules": "1.1.50"
   },
-  "devDependencies": {
-    "watch": "1.0.2"
-  },
   "scripts": {
-    "build-css": "sass src/styles/sass:src/styles/css",
-    "watch-css": "watch 'npm run-script build-css' src/styles/sass --interval=0.5 --wait=0",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "deploy": "npm-run-all -p build-css start-js",
+    "build-css": "node-sass-chokidar src/styles -o src/styles/css",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
+    "watch-css": "npm run build-css && node-sass-chokidar src/styles -o src/styles/css --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "deploy": "node ./bin/www",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
