--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,5 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "npm start"
+    NodeCommand: "npm run-script deploy"
   aws:elasticbeanstalk:application:environment:
     HTTPS_DOMAIN:
