--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/icons": "4.0.1",
     "cross-fetch": "3.0.3",
     "bootstrap": "4.3.1",
+    "classnames": "2.2.6",
     "i": "0.3.6",
     "jquery": "3.4.1",
     "npm": "6.9.0",
