--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "4.0.1",
     "@material-ui/icons": "4.0.1",
     "cross-fetch": "3.0.3",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "bootstrap": "4.3.1",
     "classnames": "2.2.6",
     "i": "0.3.6",
@@ -21,14 +22,14 @@
     "npm": "6.9.0",
     "npm-run-all": "4.1.5",
     "react": "16.8.6",
-    "react-bootstrap": "1.0.0-beta.8",
+    "react-bootstrap": "1.0.0-beta.9",
     "react-css-modules": "4.7.11",
     "react-dom": "16.8.6",
     "react-load-script": "0.0.6",
     "react-redux": "7.0.3",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
-    "react-svg": "10.0.5",
+    "react-svg": "10.0.6",
     "reactour": "1.15.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
@@ -52,7 +53,6 @@
   },
   "browserslist": [
     ">0.2%",
-    "not dead",
     "not ie <= 11",
     "not op_mini all"
   ]
