Add ? support to seedignore

--- a/.seedignore
+++ b/.seedignore
@@ -1,11 +1,20 @@
-src/_seed
 .git*
 build
+node_modules
+src/_seed
 src/actions/*.js
 src/components/*
 src/containers/*
 src/reducers/*.js
 src/util/css/*
-node_modules
-!*helpers
+?app.js
+?package.json
+?package-lock.json
+?README.md
+?public/*
+?src/index.css
+?src/index.js
+?src/assets/*
+?src/settings/*
 !.gitignore
+!*helpers
