--- a/SeedManifest.json
+++ b/SeedManifest.json
@@ -273,6 +273,27 @@
   "export": {
     "actions": [
       {
+        "name": "user",
+        "attrs": [
+          {
+            "name": "teams",
+            "type": "team[]",
+            "is_fk": true,
+            "card": {
+              "ref": "0..*",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": false,
+            "empty": false,
+            "delete": "CASCADE"
+          }
+        ],
+        "read": true,
+        "write": true,
+        "group": ""
+      },
+      {
         "name": "team",
         "attrs": [
           {
@@ -404,10 +425,145 @@
         "read": true,
         "write": true,
         "group": ""
+      },
+      {
+        "name": "match",
+        "attrs": [
+          {
+            "name": "date",
+            "type": "date",
+            "is_fk": false,
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE",
+            "default": "now"
+          },
+          {
+            "name": "type",
+            "type": "enum",
+            "is_fk": false,
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE",
+            "options": [
+              "Friendship",
+              "League",
+              "Cup"
+            ]
+          },
+          {
+            "name": "local",
+            "type": "team",
+            "is_fk": true,
+            "card": {
+              "ref": "1",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          },
+          {
+            "name": "visitor",
+            "type": "team",
+            "is_fk": true,
+            "card": {
+              "ref": "1",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          },
+          {
+            "name": "scores",
+            "type": "score[]",
+            "is_fk": true,
+            "card": {
+              "ref": "0..*",
+              "has": "1"
+            },
+            "read": true,
+            "write": false,
+            "empty": false,
+            "delete": "CASCADE"
+          }
+        ],
+        "read": true,
+        "write": true,
+        "group": "stats"
+      },
+      {
+        "name": "score",
+        "attrs": [
+          {
+            "name": "min",
+            "type": "int",
+            "is_fk": false,
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          },
+          {
+            "name": "player",
+            "type": "player",
+            "is_fk": true,
+            "card": {
+              "ref": "1",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          },
+          {
+            "name": "match",
+            "type": "match",
+            "is_fk": true,
+            "card": {
+              "ref": "1",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          }
+        ],
+        "read": true,
+        "write": true,
+        "group": "stats"
       }
     ],
     "components": [
       {
+        "name": "user",
+        "attrs": [
+          {
+            "name": "teams",
+            "type": "team[]",
+            "is_fk": true,
+            "card": {
+              "ref": "0..*",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": false,
+            "empty": false,
+            "delete": "CASCADE"
+          }
+        ],
+        "read": true,
+        "write": true,
+        "group": ""
+      },
+      {
         "name": "team",
         "attrs": [
           {
@@ -539,6 +695,120 @@
         "read": true,
         "write": true,
         "group": ""
+      },
+      {
+        "name": "match",
+        "attrs": [
+          {
+            "name": "date",
+            "type": "date",
+            "is_fk": false,
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE",
+            "default": "now"
+          },
+          {
+            "name": "type",
+            "type": "enum",
+            "is_fk": false,
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE",
+            "options": [
+              "Friendship",
+              "League",
+              "Cup"
+            ]
+          },
+          {
+            "name": "local",
+            "type": "team",
+            "is_fk": true,
+            "card": {
+              "ref": "1",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          },
+          {
+            "name": "visitor",
+            "type": "team",
+            "is_fk": true,
+            "card": {
+              "ref": "1",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          },
+          {
+            "name": "scores",
+            "type": "score[]",
+            "is_fk": true,
+            "card": {
+              "ref": "0..*",
+              "has": "1"
+            },
+            "read": true,
+            "write": false,
+            "empty": false,
+            "delete": "CASCADE"
+          }
+        ],
+        "read": true,
+        "write": true,
+        "group": "stats"
+      },
+      {
+        "name": "score",
+        "attrs": [
+          {
+            "name": "min",
+            "type": "int",
+            "is_fk": false,
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          },
+          {
+            "name": "player",
+            "type": "player",
+            "is_fk": true,
+            "card": {
+              "ref": "1",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          },
+          {
+            "name": "match",
+            "type": "match",
+            "is_fk": true,
+            "card": {
+              "ref": "1",
+              "has": "0..*"
+            },
+            "read": true,
+            "write": true,
+            "empty": false,
+            "delete": "CASCADE"
+          }
+        ],
+        "read": true,
+        "write": true,
+        "group": "stats"
       }
     ]
   }
