--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -2,4 +2,4 @@ option_settings:
   aws:elasticbeanstalk:container:nodejs:
     NodeCommand: "npm run-script deploy"
   aws:elasticbeanstalk:application:environment:
-    HTTPS_DOMAIN:
+    HTTPS_DOMAIN: ""
