--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "4.3.1",
     "classnames": "2.2.6",
     "cross-fetch": "3.0.4",
+    "datatables.net": "1.10.19",
     "extract-text-webpack-plugin": "3.0.2",
     "formik": "1.5.8",
     "jquery": "3.4.1",
