:two_hearts: Add multiselect support

--- a/SeedManifest.json
+++ b/SeedManifest.json
@@ -146,7 +146,7 @@
             "has": "0..*"
           },
           "read": true,
-          "write": false,
+          "write": true,
           "empty": false,
           "delete": "CASCADE"
         }
@@ -285,7 +285,7 @@
               "has": "0..*"
             },
             "read": true,
-            "write": false,
+            "write": true,
             "empty": false,
             "delete": "CASCADE"
           }
@@ -555,7 +555,7 @@
               "has": "0..*"
             },
             "read": true,
-            "write": false,
+            "write": true,
             "empty": false,
             "delete": "CASCADE"
           }
