--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-css-modules": "4.7.11",
     "react-dom": "16.8.6",
     "react-load-script": "0.0.6",
+    "react-popup": "0.10.0",
     "react-redux": "7.1.0",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
