--- a/.seedignore
+++ b/.seedignore
@@ -7,6 +7,7 @@ build
 node_modules
 src/seed/actions/*
 src/seed/reducers/*
+src/seed/templates/*
 src/actions/*
 src/components/*
 src/resources/css/*
